# repo-analyzer

./: .babelrc  .eslintrc.json  .gitignore  LICENSE  index.html  index.js  package-lock.json  package.json
app/: Menu.js  app.html  contexts.js  hooks.js  index.js  index.jsx  main.js  menu.js  native.js
app/constants/: colors.js  routes.js  spaces.js
app/containers/: App.jsx  Repository.jsx  RepositoryList.jsx
app/store/: Repository.js  Root.js
configs/: webpack.config.base.js  webpack.config.main.babel.js  webpack.config.renderer.babel.js
native/: Cargo.toml
native/lib/git_analyzer/: Cargo.toml
native/lib/git_analyzer/src/: lib.rs
native/src/: lib.rs  repository.rs
