[package]
name = "repo-analyzer"
version = "0.1.0"
authors = ["Max Green <strixdevelop@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "repo_analyzer"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
git_analyzer = { path = "lib/git_analyzer" }
